--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,11 +14,7 @@ build:
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - maturin                                # [build_platform != target_platform]
     - {{ compiler('c') }}
-    - {{ stdlib('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('rust') }}
     - cargo-bundle-licenses
@@ -30,21 +26,27 @@ requirements:
     - python
 
 test:
+  source_files:
+    - tests
   imports:
     - uuid_utils
   commands:
     - pip check
+    - pytest
   requires:
     - pip
+    - pytest
 
 about:
   home: https://github.com/aminalaee/uuid-utils
   summary: Drop-in replacement for Python UUID in Rust
+  description: |
+    Python UUID implementation using Rust's UUID library. 
+    This will make uuid4 function around 10x faster.
   dev_url: https://github.com/aminalaee/uuid-utils
   license: BSD-3-Clause
-  license_file:
-    - LICENSE.md
-    - THIRDPARTY.yml
+  license_file: LICENSE.md
+  license_family: BSD
 
 extra:
   recipe-maintainers:
