--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,9 +39,9 @@ test:
     - pytest
   requires:
     - pip
-    - pytest tests  # [not osx]
+    - pytest # [not osx]
     # test_getnode is marked as xfail on linux but it seems doesn't work on macOS too.
-    - pytest tests -k "not test_getnode"  # [osx]
+    - pytest -k "not test_getnode"  # [osx]
 
 about:
   home: https://github.com/aminalaee/uuid-utils
